.make/minikube/fabric8-auth-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fabric8-auth
spec:
  template:
    metadata:
      labels:
        app: fabric8-auth
    spec:
      containers:
      - name: fabric8-auth
        image: docker.io/fabric8/fabric8-auth:latest
        ports:
        - containerPort: 8089
