.make/minikube/fabric8-wit-db-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fabric8-wit-db
spec:
  template:
    metadata:
      labels:
        app: fabric8-wit-db
    spec:
      containers:
      - name: postgres
        image: postgres:9.6.5
        ports:
        - containerPort: 5432
