.make/minikube/fabric8-wit-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fabric8-wit
spec:
  template:
    metadata:
      labels:
        app: fabric8-wit
    spec:
      containers:
      - name: fabric8-wit
        image: docker.io/fabric8/fabric8-wit:latest
        ports:
        - containerPort: 8080
