.make/minikube/fabric8-auth-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fabric8-auth-db-svc
spec:
  ports:
  - port: 5432
  selector:
    app: fabric8-auth-db
