.make/minikube/fabric8-wit-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fabric8-wit-svc
spec:
  type: NodePort
  ports:
    - nodePort: 32080
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: fabric8-wit
